--- a/src/app/components/chart/chart.component.html
+++ b/src/app/components/chart/chart.component.html
@@ -1,8 +1,5 @@
 <div *ngIf="ndxService.isLoaded">
-<h1>{{ title }}</h1>
-<div id="chartDiv" class="dc-chart border bg-success">
-  <p>this is some sample text.</p>
-</div>
+<div #chartDiv></div>
 </div>
 <!--
 <section class="page-content">
