--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="banner-app"><i class="fa fa-globe" aria-hidden="true"></i><h1>Valassis Data</h1></div>
+<div class="banner-app"><i class="fa fa-globe" aria-hidden="true"></i><h1>Sample Data</h1></div>
 <div class="container">
 <h1>
   {{title}}
@@ -6,6 +6,6 @@
   <app-chart></app-chart>
 </div>
 <footer>
-  &copy; 2019 - Valassis Inc.
+  &copy; 2019 - <Company> Inc.
 </footer>
 
