added responsive charts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,12 @@
 <h1>
   {{title}}
 </h1>
-  <app-chart></app-chart>
+  <div class="row">
+    <div class="col-md-8 bg-warning">
+     <app-chart></app-chart>
+    </div>
+  </div>
 </div>
 <footer>
-  &copy; 2019 - Company Inc.
+  &copy; 2019 - myCompany Inc.
 </footer>
