--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,28 @@
 <div class="banner-app"><i class="fa fa-globe" aria-hidden="true"></i><h1>Sample Data</h1></div>
 <div class="container">
-<h1>
+<h1 class="text-center">
   {{title}}
 </h1>
   <div class="row">
-    <div class="col-md-8 bg-warning">
-     <app-chart></app-chart>
+    <div class="col-md-4 bg-success">
+       <app-chart></app-chart>
+    </div>
+    <div class="col-md-4 bg-warning">
+       <app-chart></app-chart>
+    </div>
+    <div class="col-md-4 bg-danger">
+       <app-chart></app-chart>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4 bg-info">
+       <app-barchart></app-barchart>
+    </div>
+    <div class="col-md-4 bg-dark">
+       <app-barchart></app-barchart>
+    </div>
+    <div class="col-md-4 bg-secondary">
+       <app-barchart></app-barchart>
     </div>
   </div>
 </div>
