added areachart, fixed groups and dims for charts to display properly

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -43,6 +43,19 @@
 
     <div class="row">
         <div class="col-md-4 bg-success">
+            <app-areachart></app-areachart>
+        </div>
+        <div class="col-md-4 bg-warning">
+            <app-areachart></app-areachart>
+        </div>
+        <div class="col-md-4 bg-danger">
+            <app-areachart></app-areachart>
+        </div>
+    </div>
+
+
+    <div class="row">
+        <div class="col-md-4 bg-success">
             <app-barchart></app-barchart>
         </div>
         <div class="col-md-4 bg-warning">
@@ -52,6 +65,7 @@
             <app-barchart></app-barchart>
         </div>
     </div>
+
 
 </div>
 
