--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,17 +17,17 @@
     </div>
   </div>
 
-    <div class="row">
-        <div class="col-md-4 bg-success">
-            <app-piechart></app-piechart>
-        </div>
-        <div class="col-md-4 bg-warning">
-            <app-piechart></app-piechart>
-        </div>
-        <div class="col-md-4 bg-danger">
-            <app-piechart></app-piechart>
-        </div>
-    </div>
+  <div class="row">
+      <div class="col-md-4 bg-success">
+          <app-piechart></app-piechart>
+      </div>
+      <div class="col-md-4 bg-warning">
+          <app-piechart></app-piechart>
+      </div>
+      <div class="col-md-4 bg-danger">
+          <app-piechart></app-piechart>
+      </div>
+  </div>
 
   <div class="row">
     <div class="col-md-4 bg-success">
@@ -41,30 +41,41 @@
     </div>
   </div>
 
-    <div class="row">
-        <div class="col-md-4 bg-success">
-            <app-areachart></app-areachart>
-        </div>
-        <div class="col-md-4 bg-warning">
-            <app-areachart></app-areachart>
-        </div>
-        <div class="col-md-4 bg-danger">
-            <app-areachart></app-areachart>
-        </div>
-    </div>
+  <div class="row">
+      <div class="col-md-4 bg-success">
+          <app-areachart></app-areachart>
+      </div>
+      <div class="col-md-4 bg-warning">
+          <app-areachart></app-areachart>
+      </div>
+      <div class="col-md-4 bg-danger">
+          <app-areachart></app-areachart>
+      </div>
+  </div>
 
+  <div class="row">
+      <div class="col-md-4 bg-success">
+          <app-linechart></app-linechart>
+      </div>
+      <div class="col-md-4 bg-warning">
+          <app-linechart></app-linechart>
+      </div>
+      <div class="col-md-4 bg-danger">
+          <app-linechart></app-linechart>
+      </div>
+  </div>
 
-    <div class="row">
-        <div class="col-md-4 bg-success">
-            <app-barchart></app-barchart>
-        </div>
-        <div class="col-md-4 bg-warning">
-            <app-barchart></app-barchart>
-        </div>
-        <div class="col-md-4 bg-danger">
-            <app-barchart></app-barchart>
-        </div>
-    </div>
+  <div class="row">
+      <div class="col-md-4 bg-success">
+          <app-barchart></app-barchart>
+      </div>
+      <div class="col-md-4 bg-warning">
+          <app-barchart></app-barchart>
+      </div>
+      <div class="col-md-4 bg-danger">
+          <app-barchart></app-barchart>
+      </div>
+  </div>
 
 
 </div>
