--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,6 +42,18 @@
   </div>
 
   <div class="row">
+    <div class="col-md-4 bg-success">
+       <app-boxplot></app-boxplot>
+    </div>
+    <div class="col-md-4 bg-warning">
+       <app-boxplot></app-boxplot>
+    </div>
+    <div class="col-md-4 bg-danger">
+       <app-boxplot></app-boxplot>
+    </div>
+  </div>
+
+  <div class="row">
       <div class="col-md-4 bg-success">
           <app-areachart></app-areachart>
       </div>
