added aggregate datatable component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -78,6 +78,18 @@
   </div>
 
   <div class="row">
+    <div class="col-md-4 bg-success">
+	<app-rowchart></app-rowchart>
+    </div>
+    <div class="col-md-4 bg-warning">
+	<app-rowchart></app-rowchart>
+    </div>
+    <div class="col-md-4 bg-danger">
+	<app-rowchart></app-rowchart>
+    </div>
+  </div>
+
+  <div class="row">
       <div class="col-md-4 bg-success">
           <app-barchart></app-barchart>
       </div>
@@ -89,6 +101,17 @@
       </div>
   </div>
 
+  <div class="row">
+      <div class="col-md-4 bg-success">
+          <app-aggdata></app-aggdata>
+      </div>
+      <div class="col-md-4 bg-warning">
+          <app-aggdata></app-aggdata>
+      </div>
+      <div class="col-md-4 bg-danger">
+          <app-aggdata></app-aggdata>
+      </div>
+  </div>
 
 </div>
 
