changed title and footer on main page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="banner-app"><i class="fa fa-globe" aria-hidden="true"></i><h1>Sample Data</h1></div>
+<div class="banner-app"><i class="fa fa-globe" aria-hidden="true"></i><h1>Hackathon - Q3 2019</h1></div>
 <div class="container">
 
     <h1 class="text-center">
@@ -116,5 +116,5 @@
 </div>
 
 <footer>
-  &copy; 2019 - myCompany Inc.
+  &copy; 2019 - Valassis Inc.
 </footer>
