--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -67,15 +67,28 @@
 
   <div class="row">
       <div class="col-md-4 bg-success">
-          <app-linechart></app-linechart>
+          <app-serieschart></app-serieschart>
       </div>
       <div class="col-md-4 bg-warning">
-          <app-linechart></app-linechart>
+          <app-serieschart></app-serieschart>
       </div>
       <div class="col-md-4 bg-danger">
-          <app-linechart></app-linechart>
+          <app-serieschart></app-serieschart>
       </div>
   </div>
+
+    <div class="row">
+        <div class="col-md-4 bg-success">
+            <app-linechart></app-linechart>
+        </div>
+        <div class="col-md-4 bg-warning">
+            <app-linechart></app-linechart>
+        </div>
+        <div class="col-md-4 bg-danger">
+            <app-linechart></app-linechart>
+        </div>
+    </div>
+
 
   <div class="row">
     <div class="col-md-4 bg-success">
