started code on chloropleth

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,122 +6,148 @@
 </h1>
 
   <div class="row">
-    <div class="col-md-4 bg-success">
+    <div class="col-xl-4 bg-success">
        <app-numberchart></app-numberchart>
     </div>
-    <div class="col-md-4 bg-warning">
+    <div class="col-xl-4 bg-warning">
        <app-numberchart></app-numberchart>
     </div>
-    <div class="col-md-4 bg-danger">
+    <div class="col-xl-4 bg-danger">
        <app-numberchart></app-numberchart>
     </div>
   </div>
 
   <div class="row">
-      <div class="col-md-4 bg-success">
+      <div class="col-xl-4 bg-success">
           <app-piechart></app-piechart>
       </div>
-      <div class="col-md-4 bg-warning">
+      <div class="col-xl-4 bg-warning">
           <app-piechart></app-piechart>
       </div>
-      <div class="col-md-4 bg-danger">
+      <div class="col-xl-4 bg-danger">
           <app-piechart></app-piechart>
       </div>
   </div>
 
   <div class="row">
-    <div class="col-md-4 bg-success">
+    <div class="col-xl-4 bg-success">
        <app-scatterplot></app-scatterplot>
     </div>
-    <div class="col-md-4 bg-warning">
+    <div class="col-xl-4 bg-warning">
        <app-scatterplot></app-scatterplot>
     </div>
-    <div class="col-md-4 bg-danger">
+    <div class="col-xl-4 bg-danger">
        <app-scatterplot></app-scatterplot>
     </div>
   </div>
 
   <div class="row">
-    <div class="col-md-4 bg-success">
+    <div class="col-xl-4 bg-success">
        <app-boxplot></app-boxplot>
     </div>
-    <div class="col-md-4 bg-warning">
+    <div class="col-xl-4 bg-warning">
        <app-boxplot></app-boxplot>
     </div>
-    <div class="col-md-4 bg-danger">
+    <div class="col-xl-4 bg-danger">
        <app-boxplot></app-boxplot>
     </div>
   </div>
 
   <div class="row">
-      <div class="col-md-4 bg-success">
+      <div class="col-xl-4 bg-success">
+          <app-heatmap></app-heatmap>
+      </div>
+      <div class="col-xl-4 bg-warning">
+          <app-heatmap></app-heatmap>
+      </div>
+      <div class="col-xl-4 bg-danger">
+          <app-heatmap></app-heatmap>
+      </div>
+  </div>
+
+
+
+  <div class="row">
+      <div class="col-xl-4 bg-success">
           <app-areachart></app-areachart>
       </div>
-      <div class="col-md-4 bg-warning">
+      <div class="col-xl-4 bg-warning">
           <app-areachart></app-areachart>
       </div>
-      <div class="col-md-4 bg-danger">
+      <div class="col-xl-4 bg-danger">
           <app-areachart></app-areachart>
       </div>
   </div>
 
   <div class="row">
-      <div class="col-md-4 bg-success">
+      <div class="col-xl-4 bg-success">
           <app-serieschart></app-serieschart>
       </div>
-      <div class="col-md-4 bg-warning">
+      <div class="col-xl-4 bg-warning">
           <app-serieschart></app-serieschart>
       </div>
-      <div class="col-md-4 bg-danger">
+      <div class="col-xl-4 bg-danger">
           <app-serieschart></app-serieschart>
       </div>
   </div>
 
-    <div class="row">
-        <div class="col-md-4 bg-success">
-            <app-linechart></app-linechart>
-        </div>
-        <div class="col-md-4 bg-warning">
-            <app-linechart></app-linechart>
-        </div>
-        <div class="col-md-4 bg-danger">
-            <app-linechart></app-linechart>
-        </div>
-    </div>
+  <div class="row">
+      <div class="col-xl-4 bg-success">
+          <app-compositechart></app-compositechart>
+      </div>
+      <div class="col-xl-4 bg-warning">
+          <app-compositechart></app-compositechart>
+      </div>
+      <div class="col-xl-4 bg-danger">
+          <app-compositechart></app-compositechart>
+      </div>
+  </div>
+
+  <div class="row">
+      <div class="col-xl-4 bg-success">
+          <app-linechart></app-linechart>
+      </div>
+      <div class="col-xl-4 bg-warning">
+          <app-linechart></app-linechart>
+      </div>
+      <div class="col-xl-4 bg-danger">
+          <app-linechart></app-linechart>
+      </div>
+  </div>
 
 
   <div class="row">
-    <div class="col-md-4 bg-success">
+    <div class="col-xl-4 bg-success">
 	<app-rowchart></app-rowchart>
     </div>
-    <div class="col-md-4 bg-warning">
+    <div class="col-xl-4 bg-warning">
 	<app-rowchart></app-rowchart>
     </div>
-    <div class="col-md-4 bg-danger">
+    <div class="col-xl-4 bg-danger">
 	<app-rowchart></app-rowchart>
     </div>
   </div>
 
   <div class="row">
-      <div class="col-md-4 bg-success">
+      <div class="col-xl-4 bg-success">
           <app-barchart></app-barchart>
       </div>
-      <div class="col-md-4 bg-warning">
+      <div class="col-xl-4 bg-warning">
           <app-barchart></app-barchart>
       </div>
-      <div class="col-md-4 bg-danger">
+      <div class="col-xl-4 bg-danger">
           <app-barchart></app-barchart>
       </div>
   </div>
 
   <div class="row">
-      <div class="col-md-4 bg-success">
+      <div class="col-xl-4 bg-success">
           <app-aggdata></app-aggdata>
       </div>
-      <div class="col-md-4 bg-warning">
+      <div class="col-xl-4 bg-warning">
           <app-aggdata></app-aggdata>
       </div>
-      <div class="col-md-4 bg-danger">
+      <div class="col-xl-4 bg-danger">
           <app-aggdata></app-aggdata>
       </div>
   </div>
