--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,13 @@
   {{title}}
 </h1>
 
+    <div class="row">
+        <div class="col-xl-12 bg-info">
+            <app-chloropleth></app-chloropleth>
+        </div>
+    </div>
+
+
   <div class="row">
     <div class="col-xl-4 bg-success">
        <app-numberchart></app-numberchart>
