--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,11 @@
 <div class="container">
 
     <h1 class="text-center">
-  {{title}}
+  {{message}}
 </h1>
+
+    <div id="themePicker" class="text-center"><span class="text-dark mr-2">Theme</span></div>
+
 
     <div class="row">
         <div class="col-xl-12 bg-info">
