--- a/src/app/components/piechart/piechart.component.html
+++ b/src/app/components/piechart/piechart.component.html
@@ -1,5 +1,5 @@
 <div #chartContainer *ngIf="ndxService.isLoaded">
    <div #chartDiv (window:resize)="onResize()"></div>
-   <p>{{message}}</p>
+   <p>{{defaultTheme}}</p>
 </div>
 
