--- a/src/app/components/chloropleth/chloropleth.component.html
+++ b/src/app/components/chloropleth/chloropleth.component.html
@@ -1,5 +1,6 @@
 <div #chartContainer *ngIf="ndxService.isLoaded">
    <div #chartDiv (window:resize)="onResize()"></div>
-   <p>{{message}}</p>
+   <a class="reset" href="javascript:this.chart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
+   <p>{{defaultTheme}}</p>
 </div>
 
