commit changes, for ng update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="container">
 
     <h1 class="text-center">
-  {{defaultTheme}}
+        {{defaultTheme}} - {{data.themeObservable.valueOf()}}
 </h1>
 
     <div id="themePicker" class="text-center"><span class="text-dark mr-2">Theme</span></div>
