tweak piechart dimension, link to regions in chloropleth

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,14 @@
-<div class="banner-app"><i class="fa fa-globe" aria-hidden="true"></i><h1>Hackathon - Q3 2019</h1></div>
+<div class="banner-app"><i class="fa fa-globe" aria-hidden="true"></i><h1>Hackathon - Q3 2019</h1>
+</div>
 <div class="container">
-
-    <div id="themePicker" class="text-center"><span class="text-dark mr-2">Theme</span></div>
+    <div class="row">
+        <div class="col-xl-9">
+          <app-datacount></app-datacount>
+        </div>
+        <div class="col-xl-3">
+            <div id="themePicker" class="text-center"><span class="text-dark mr-2">Theme</span></div>
+        </div>
+    </div>
 
 
     <div class="row">
