--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
           <app-datacount></app-datacount>
         </div>
         <div class="col-xl-3">
-            <div id="themePicker" class="text-center"><span class="text-dark mr-2">Theme</span></div>
+            <div id="themePicker" class="text-right"><span class="text-dark mr-2">Theme</span></div>
         </div>
     </div>
 
@@ -66,6 +66,19 @@
     </div>
   </div>
 
+
+  <div class="row">
+      <div class="col-xl-4 bg-success">
+          <app-bubblechart></app-bubblechart>
+      </div>
+      <div class="col-xl-4 bg-warning">
+          <app-bubblechart></app-bubblechart>
+      </div>
+      <div class="col-xl-4 bg-danger">
+          <app-bubblechart></app-bubblechart>
+      </div>
+  </div>
+
   <div class="row">
       <div class="col-xl-4 bg-success">
           <app-heatmap></app-heatmap>
@@ -153,7 +166,7 @@
       </div>
   </div>
 
-  <div class="row">
+    <div class="row">
       <div class="col-xl-4 bg-success">
           <app-aggdata></app-aggdata>
       </div>
