--- a/src/app/components/barchart/barchart.component.css
+++ b/src/app/components/barchart/barchart.component.css
@@ -64,6 +64,12 @@
   color: #08457E;
 }
 
+.reset {
+  padding-left: 1em;
+  font-size: smaller;
+  text-decoration: underline;
+  /*color: #E6550D;*/
+}
 
 
 
