--- a/src/app/components/piechart/piechart.component.html
+++ b/src/app/components/piechart/piechart.component.html
@@ -1,5 +1,7 @@
 <div #chartContainer *ngIf="ndxService.isLoaded">
-   <div #chartDiv (window:resize)="onResize()"></div>
+   <div #chartDiv (window:resize)="onResize()">
+   <a class="reset" href="javascript:reset()" (click)="reset()" style="display: none;">reset</a>
    <p>{{defaultTheme}}</p>
+   </div>
 </div>
 
