--- a/src/app/components/chloropleth/chloropleth.component.html
+++ b/src/app/components/chloropleth/chloropleth.component.html
@@ -1,6 +1,7 @@
 <div #chartContainer *ngIf="ndxService.isLoaded">
-   <div #chartDiv (window:resize)="onResize()"></div>
-   <a class="reset" href="javascript:this.chart.filterAll();dc.redrawAll();" style="display: none;">reset</a>
+   <div #chartDiv (window:resize)="onResize()">
+      <a class="reset" href="javascript:reset()" (click)="reset()" style="display: none;">reset</a>
    <p>{{defaultTheme}}</p>
+   </div>
 </div>
 
