--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,8 +12,11 @@
 
 
     <div class="row">
-        <div class="col-xl-12 bg-info">
+        <div class="col-xl-6 bg-dark">
             <app-chloropleth></app-chloropleth>
+        </div>
+        <div class="col-xl-6 bg-secondary">
+            <app-statechloropleth></app-statechloropleth>
         </div>
     </div>
 
